[gd_scene load_steps=20 format=2]

[ext_resource path="res://Resources/bg.png" type="Texture" id=1]
[ext_resource path="res://Resources/Dice/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Resources/Font/Grandstander-clean.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Pseudo.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sounds/bg.mp3" type="AudioStream" id=5]
[ext_resource path="res://Resources/Sounds/reveal.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Sounds/nreveal.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Sounds/roll.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Font/CHLORINR.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Resources/Fonts/8-bit Arcade In.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Resources/Fonts/genshinfont.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=6]
size = 98
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 10
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 10
outline_color = Color( 0.0117647, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=8]
resource_name = "rolls"
tracks/0/type = "value"
tracks/0/path = NodePath("Dices/Dice:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 4, 5, 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dices/Dice2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 2, 4, 5, 1 ]
}

[node name="Pseudo" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_right = 255.0
margin_bottom = 100.0
rect_min_size = Vector2( 255, 100 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="Back"]
rect_min_size = Vector2( 255, 100 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 8
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Back"
text = "Back"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 323.0
margin_right = 973.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 5 )
text = "Pseudo Random"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dices" type="Node" parent="."]

[node name="Dice" type="Sprite" parent="Dices"]
modulate = Color( 0.486275, 0.235294, 0.996078, 1 )
self_modulate = Color( 0.486275, 0.235294, 0.996078, 1 )
position = Vector2( 339, 144 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6
frame = 2

[node name="Dice2" type="Sprite" parent="Dices"]
modulate = Color( 0.486275, 0.235294, 0.996078, 1 )
self_modulate = Color( 0.486275, 0.235294, 0.996078, 1 )
position = Vector2( 965, 151 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="Buttons" type="Node" parent="."]

[node name="Roll" type="Button" parent="Buttons"]
margin_left = 523.0
margin_top = 535.0
margin_right = 753.0
margin_bottom = 612.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Roll!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reveal" type="Button" parent="Buttons"]
visible = false
margin_left = 822.0
margin_top = 531.0
margin_right = 1097.0
margin_bottom = 608.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Reveal!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Node" parent="."]

[node name="Overall" type="Label" parent="Output"]
margin_left = 575.0
margin_top = 119.0
margin_right = 725.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 3 )
text = "?
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Odd" type="Label" parent="Output"]
margin_left = 135.0
margin_top = 287.0
margin_right = 1108.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 4 )
text = "Press Roll to Start
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Epoch" type="Label" parent="Output"]
margin_top = 690.0
margin_right = 434.0
margin_bottom = 721.0
custom_colors/font_color = Color( 0, 1, 0.0156863, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "64"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="Background" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -18.0

[node name="Roll" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Reveal" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[node name="NoPress" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rolls = SubResource( 8 )

[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Buttons/Roll" to="." method="_on_Roll_pressed"]
[connection signal="pressed" from="Buttons/Reveal" to="." method="_on_Reveal_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
